--- a/Leetcode/note/array/001.数组交集.350.md
+++ b/Leetcode/note/array/001.数组交集.350.md
@@ -14,7 +14,7 @@
 
 ## 算法
 
-### 方法一
+### Map
 
 使用`Map`存储第一个数组中数字出现的次数，然后在第二个数组中匹配`Map`中对应的key，一旦匹配成功，将对应的`value--`，并将`key`推入结果数组
 
@@ -39,7 +39,7 @@ function intersect(nums1, nums2) {
 }
 ```
 
-### 方法二（参数数组有序）
+### 双指针
 
 两个数组都是由小至大递增，使用指针滑动判断当前两数组元素大小，如不同，则指向小值的指针滑动；若相同，则同时滑动并将值推入结果数组
 
