--- a/Leetcode/note/array/004.买股票的最佳时机-动态规划.121.md
+++ b/Leetcode/note/array/004.买股票的最佳时机-动态规划.121.md
@@ -18,9 +18,7 @@
 
 ## 算法
 
-### 方法一
-
-双循环暴力求解
+### 暴力法
 
 ```js
 function maxProfit(prices) {
@@ -36,7 +34,7 @@ function maxProfit(prices) {
 }
 ```
 
-### 方法二
+### 贪心算法
 
 `双窗口+滑动指针`实现`贪心算法`，左指针表示买入时间（[0, length-1]），右指针表示卖出时间（[1, length]）。每次循环滑动右指针，若右指针小于左指针（此时不可能卖出）则将左指针指向右指针当前位置并且让右指针+1；若右指针大于左指针（则可以卖出）则判断当前利润是否大于已获得的利润，如果大于则卖出，否则跳过，然后让右指针+1并且左指针不变
 
@@ -59,9 +57,7 @@ function maxProfit(prices) {
 }
 ```
 
-### 方法三
-
-`贪心算法`
+### 另一个贪心算法
 
 ```js
 function maxProfit(prices) {
