--- a/Leetcode/note/array/005.旋转数组.189.md
+++ b/Leetcode/note/array/005.旋转数组.189.md
@@ -14,7 +14,7 @@
 
 ## 算法
 
-### 方法一
+### pop()和unshift()
 
 使用`pop()`和`unshift()`
 
@@ -30,7 +30,7 @@ function rotate(nums, k) {
 }
 ```
 
-### 方法二
+### 原地算法
 
 `原地`、`绝地反转`算法
 
@@ -50,7 +50,7 @@ function rotate(nums, k) {
 }
 ```
 
-### 方法三
+### 另一种原地算法
 
 由`方法二`可得：
 
