--- a/Leetcode/note/array/006.转置矩阵.867.md
+++ b/Leetcode/note/array/006.转置矩阵.867.md
@@ -14,7 +14,7 @@
 
 ## 算法
 
-### 方法一
+### 双循环一
 
 当给`B[0][0]`第一次赋值时，需要将`B[0]`设为`[]`
 
@@ -31,7 +31,7 @@ function transpose(A) {
 }
 ```
 
-### 方法二
+### 双循环二
 
 初始化一个`j*i`的空数组，需要注意**不能**使用`new Array(A[0].length).fill(new Array(A.length))`初始化B，这样数组B的第一维的数组都是同一个引用，当`B[0][0] = 1`时，`B[1][0] === 1`
 
