--- a/Leetcode/note/array/007.移除元素.27.md
+++ b/Leetcode/note/array/007.移除元素.27.md
@@ -20,7 +20,7 @@
 
 ## 算法
 
-### 算法一
+### 覆盖
 
 从第一项开始遍历，将和val不同的项依次覆盖到数组的前n项，n即为结果
 
@@ -37,7 +37,7 @@ function removeElement(nums, val) {
 }
 ```
 
-### 算法二
+### 交换
 
 `交换移除`：遍历nums，左指针指向第一个元素位置0，右指针指向最后一个元素位置length-1。遍历开始左指针+1，当当前值与val相同时，交换左右指针的值，此时左指针-1，右指针-1，遍历的结束位置（之后全部是val相等的值）应该也-1。所以length即为结果
 
@@ -60,7 +60,7 @@ function removeElement(nums, val) {
 }
 ```
 
-### 方法三
+### 双指针
 
 `双指针`：类似方法二，左指针指向第一个元素，右指针指向最后一个元素，若左指针遇到等于val的值，则使用右指针的值覆盖左指针，此时右指针-1；若左指针的值不等于val，那么左指针+1。结束条件是左指针大于右指针。左指针指向的第i个位置即为结果i
 
@@ -80,7 +80,7 @@ function removeElement(nums, val) {
 }
 ```
 
-### 方法四
+### splice()
 
 遍历数组，遇到等于val的值则使用`splice()`删除
 
