--- a/Leetcode/note/array/008.删除排序数组中重复元素.26.md
+++ b/Leetcode/note/array/008.删除排序数组中重复元素.26.md
@@ -17,7 +17,7 @@
 
 ## 算法
 
-### 方法一
+### 覆盖
 
 将不重复的项放在数组的前n项，n为结果
 
@@ -34,7 +34,7 @@ function removeDuplicates(nums) {
 }
 ```
 
-### 方法二
+### 双指针
 
 `双指针`：左指针指向第一个元素的位置(i=0)，右指针指向第二个元素的位置(j=1)，循环结束条件是右指针小于数组长度。若左指针和右指针值相同，则右指针+1指向下一个位置；若左指针和右指针值不同，则左指针+1指向下一个位置，然后将右指针的值赋值给左指针并且右指针+1。结果为左指针位置+1
 
