--- a/Leetcode/note/array/041.只出现一次的数字II.137.md
+++ b/Leetcode/note/array/041.只出现一次的数字II.137.md
@@ -29,7 +29,7 @@ export const singleNumber = (nums) => {
 
 ### 位运算二
 
-上一题[136 - 只出现一次的数字](/js-data-structures-algorithms/leetcode/array/040.只出现一次的数字.136.html)使用了按位异或运算`^`，这种运算只能判断一个数字出现的偶数次数，这一题数字可能出现一次或三次，就不能只使用异或运算
+上一题[136 - 只出现一次的数字](/leetcode/array/040.只出现一次的数字.136.html)使用了按位异或运算`^`，这种运算只能判断一个数字出现的偶数次数，这一题数字可能出现一次或三次，就不能只使用异或运算
 
 相比于上一题需要判断的数字出现的状态`出现一次`、`出现两次`，这一题数字会出现三种状态：`出现一次`、`出现两次`、`出现三次`，我们需要两个变量来存储这三种状态：`one`表示出现一次的数字的异或结果，`two`表示出现两次的数字的异或结果
 
