--- a/Leetcode/note/array/042.只出现一次的数字III.260.md
+++ b/Leetcode/note/array/042.只出现一次的数字III.260.md
@@ -38,7 +38,7 @@ export const singleNumber = (nums) => {
 
 这里我们使用`x & (-x)`运算（`-x`相当于`~x + 1`），结果保留二进制中最右边的一个`1`：对于数字`12`二进制表示为`1100`，`12 & (-12) = 4`，即二进制`100`，保留了最右边一个`1`
 
-由于异或结果的这一位是`1`，说明只出现一次的两个数字的二进制的这一位是不同的，我们对数组中所有数数字与这一位进行按位与运算`&`，则可以将数组按照二进制这一位是否为`1`分成两个数组，然后我们对每一个数组进行异或运算`^`（这里其实简化成了[136题](/js-data-structures-algorithms/leetcode/array/040.只出现一次的数字.136.html)），就可得到只出现一次的两个数字
+由于异或结果的这一位是`1`，说明只出现一次的两个数字的二进制的这一位是不同的，我们对数组中所有数数字与这一位进行按位与运算`&`，则可以将数组按照二进制这一位是否为`1`分成两个数组，然后我们对每一个数组进行异或运算`^`（这里其实简化成了[136题](/leetcode/array/040.只出现一次的数字.136.html)），就可得到只出现一次的两个数字
 
 ```js
 export const singleNumber = (nums) => {
