--- a/Leetcode/note/greedy/002.分发饼干.455.md
+++ b/Leetcode/note/greedy/002.分发饼干.455.md
@@ -31,17 +31,17 @@
 ```js
 export const findContentChildren = (g, s) => {
 	const children = g.sort((a, b) => a - b);
-	const bisbuits = s.sort((a, b) => a - b);
-	let c = 0,
-		b = 0;
+	const bitcuites = s.sort((a, b) => a - b);
 	let res = 0;
-	while (c < children.length && b < bisbuits.length) {
-		if (children[c] <= bisbuits[b]) {
-			b++;
-			c++;
+	let cIdx = 0,
+		bIdx = 0;
+	while (cIdx < children.length && bIdx < bitcuites.length) {
+		if (bitcuites[bIdx] >= children[cIdx]) {
+			bIdx++;
+			cIdx++;
 			res++;
 		} else {
-			b++;
+			bIdx++;
 		}
 	}
 	return res;
