--- a/Leetcode/note/linkedList/001.删除链表的倒数第N个节点.19.md
+++ b/Leetcode/note/linkedList/001.删除链表的倒数第N个节点.19.md
@@ -17,6 +17,13 @@
 要删除链表的某个节点，需要找到被删除节点的前一个节点`prev`，然后`prev.next = prev.next.next`即删除`prev的后面一个节点`
 
 ```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val) {
+ *     this.val = val;
+ *     this.next = null;
+ * }
+ */
 export const removeNthFromEnd = (head, n) => {
 	let fast = head,
 		slow = head;
