--- a/Leetcode/note/linkedList/003.删除中间节点.面试题02.03.md
+++ b/Leetcode/note/linkedList/003.删除中间节点.面试题02.03.md
@@ -14,6 +14,13 @@
 将需要删除的节点替换成下一个节点
 
 ```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val) {
+ *     this.val = val;
+ *     this.next = null;
+ * }
+ */
 export const deleteNode = (node) => {
 	node.val = node.next.val;
 	node.next = node.next.next;
