--- a/Leetcode/note/linkedList/004.合并两个有序列表.21.md
+++ b/Leetcode/note/linkedList/004.合并两个有序列表.21.md
@@ -16,6 +16,13 @@
 声明一个新的链表头`prevNode`，然后迭代两个链表`l1`和`l2`，将`prevNode`的下一个位置指向较小的值，然后让较小的值得指针向后移动一个，`prevNode`也向后移动一个，然后继续判断。直到`l1`或`l2`指向链表尾部时且另一个链表不为空，则将`prevNode.next`连接到剩余的链表
 
 ```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val) {
+ *     this.val = val;
+ *     this.next = null;
+ * }
+ */
 export const mergeTwoLists = (l1, l2) => {
 	let prevHead = new listNode(-1);
 	let prevNode = prevHead;
