--- a/Leetcode/note/linkedList/005.反转链表.206.md
+++ b/Leetcode/note/linkedList/005.反转链表.206.md
@@ -20,6 +20,13 @@
 声明一个头节点`listHead`，然后依次向后遍历原链表，将当前节点插入到`listHead`和`listHead.next`之前，最后返回`listHead.next`
 
 ```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val) {
+ *     this.val = val;
+ *     this.next = null;
+ * }
+ */
 export const reverseList = (head) => {
 	let listHead = new ListNode();
 	while (head) {
@@ -42,6 +49,13 @@ export const reverseList = (head) => {
 最后完成当前节点`head`的操作后我们返回节点`node`，这里的`node`始终上一次递归返回的`node`，所以`node`没有发生变化，一直是最深一次递归返回的`head`，所以最后结束函数返回的就是原链表的尾节点（翻转后链表的头节点）
 
 ```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val) {
+ *     this.val = val;
+ *     this.next = null;
+ * }
+ */
 export const reverseList = (head) => {
 	if (head === null || head.next === null) {
 		return head;
@@ -58,6 +72,13 @@ export const reverseList = (head) => {
 维护两个相邻的指针，快指针是`prev`（默认指向`head`），慢指针是`cur`（默认指向`null`），将`prev.next`指向`cur`（即每次都翻转`prev`和`cur`之间的指向关系），然后都向后移动一位并重复之前的翻转，最后当`prev`指向`null`时返回`cur`
 
 ```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val) {
+ *     this.val = val;
+ *     this.next = null;
+ * }
+ */
 export const reverseList = (head) => {
 	let prev = head,
 		cur = null;
@@ -82,6 +103,13 @@ export const reverseList = (head) => {
 最后当`toEnd`指向`null`时返回`start`
 
 ```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val) {
+ *     this.val = val;
+ *     this.next = null;
+ * }
+ */
 export const reverseList = (head) => {
 	if (!head) return null;
 	let toEnd = head,
