--- a/Leetcode/note/linkedList/006.删除链表的节点.剑指Offer18.md
+++ b/Leetcode/note/linkedList/006.删除链表的节点.剑指Offer18.md
@@ -26,6 +26,13 @@
 ### 原地删除
 
 ```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val) {
+ *     this.val = val;
+ *     this.next = null;
+ * }
+ */
 export const deleteNode = (head, val) => {
 	if (head.val === val) return head.next;
 	let node = head;
@@ -42,6 +49,13 @@ export const deleteNode = (head, val) => {
 ### 递归
 
 ```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val) {
+ *     this.val = val;
+ *     this.next = null;
+ * }
+ */
 export const deleteNode = (head, val) => {
 	if (head.val === val) return head.next;
 	head.next = deleteNode(head.next, val);
