--- a/Leetcode/note/linkedList/007.链表的中间结点.876.md
+++ b/Leetcode/note/linkedList/007.链表的中间结点.876.md
@@ -27,6 +27,13 @@
 第二次找到中间结点并返回
 
 ```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val) {
+ *     this.val = val;
+ *     this.next = null;
+ * }
+ */
 export const middleNode = (head) => {
 	let count = 0;
 	let node = head;
@@ -47,6 +54,13 @@ export const middleNode = (head) => {
 两个指向head的指针，快指针走两步，慢指针走一步。快指针走到终点时，慢指针恰好是一半的位置
 
 ```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val) {
+ *     this.val = val;
+ *     this.next = null;
+ * }
+ */
 export const middleNode = (head) => {
 	let fast = head,
 		slow = head;
