--- a/Leetcode/note/linkedList/008.相交链表.160.md
+++ b/Leetcode/note/linkedList/008.相交链表.160.md
@@ -32,6 +32,13 @@
 使用`Map`来存储`链表A`的每一个节点（map的键存储），然后遍历`链表B`的每一个节点，使用`map.has()`方法来判断是否在`map`中存储了相同的节点，如果有则返回该节点
 
 ```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val) {
+ *     this.val = val;
+ *     this.next = null;
+ * }
+ */
 export const getIntersectionNode = (headA, headB) => {
 	const map = new Map();
 	let nodeA = headA;
@@ -53,6 +60,13 @@ export const getIntersectionNode = (headA, headB) => {
 求出链表`A`和`B`的长度，如果有空链表返回`null`，否则将快指针`fast`指向较长的链表，将慢指针`slow`指向较短的链表，然后让快指针先走两个链表长度的差的步（使两个指针对齐），然后同时向后移动，如果有公共链表则两指针会指向同一个节点
 
 ```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val) {
+ *     this.val = val;
+ *     this.next = null;
+ * }
+ */
 export const getIntersectionNode = (headA, headB) => {
 	let nodeA = headA,
 		nodeB = headB;
