--- a/Leetcode/note/linkedList/010.二进制链表转整数.1290.md
+++ b/Leetcode/note/linkedList/010.二进制链表转整数.1290.md
@@ -39,6 +39,13 @@ parseInt(num|string, digit)
 ```
 
 ```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val) {
+ *     this.val = val;
+ *     this.next = null;
+ * }
+ */
 export const getDecimalValue = (head) => {
 	let s = "";
 	while (head) {
@@ -54,6 +61,13 @@ export const getDecimalValue = (head) => {
 每次内存函数返回当前的数字`total`以及位数`digit`，利用进制转换的公式来求出十进制数字
 
 ```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val) {
+ *     this.val = val;
+ *     this.next = null;
+ * }
+ */
 export const getDecimalValue = (head) => {
 	function recursion(head, digit, total) {
 		if (!head.next) return [head.val ? 1 : 0, 0];
@@ -70,6 +84,13 @@ export const getDecimalValue = (head) => {
 根据进制转换的算法，从高位开始模拟转换：`num = num * 2 + head.val`
 
 ```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val) {
+ *     this.val = val;
+ *     this.next = null;
+ * }
+ */
 export const getDecimalValue = (head) => {
 	let num = 0;
 	while (head) {
