--- a/Leetcode/note/linkedList/011.回文链表.234.md
+++ b/Leetcode/note/linkedList/011.回文链表.234.md
@@ -19,6 +19,13 @@
 将链表中的所有数字放在数组中，然后使用双指针从数组首尾开始检查是否是回文
 
 ```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val) {
+ *     this.val = val;
+ *     this.next = null;
+ * }
+ */
 export const isPalindrome = (head) => {
 	const arr = [];
 	while (head) {
@@ -43,6 +50,13 @@ export const isPalindrome = (head) => {
 指向链表头部的指针`listHead`和指向链表中间且其后反转的指针`halfHead`，同时移动两个指针，如果遇到不同的值则返回`false`，比较到`halfHead`指向链表结尾则返回`true`
 
 ```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val) {
+ *     this.val = val;
+ *     this.next = null;
+ * }
+ */
 export const isPalindrome = (head) => {
 	let fast = head,
 		slow = head;
