--- a/Leetcode/note/linkedList/012.删除排序链表中的重复元素.83.md
+++ b/Leetcode/note/linkedList/012.删除排序链表中的重复元素.83.md
@@ -23,6 +23,13 @@
 直到`cur`的值为`null`时，返回哨兵节点`sentinel`的下一个位置
 
 ```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val) {
+ *     this.val = val;
+ *     this.next = null;
+ * }
+ */
 export const deleteDuplicates = (head) => {
 	let sentinel = new ListNode(NaN);
 	sentinel.next = head;
@@ -46,6 +53,13 @@ export const deleteDuplicates = (head) => {
 将链表的所有值取出放在数组中，使用`set`去重后再生成一个新链表
 
 ```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val) {
+ *     this.val = val;
+ *     this.next = null;
+ * }
+ */
 export const deleteDuplicates = (head) => {
 	const arr = [];
 	while (head) {
