--- a/Leetcode/note/linkedList/013.环形链表.141.md
+++ b/Leetcode/note/linkedList/013.环形链表.141.md
@@ -39,6 +39,13 @@
 遍历链表，在`set`中判断是否有当前节点，如果有返回`true`，如果没有则将这个节点添加到`set`中，遍历到链表尾在`set`中仍没有相同节点返回`false`
 
 ```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val) {
+ *     this.val = val;
+ *     this.next = null;
+ * }
+ */
 export const hasCycle = (head) => {
 	const set = new Set();
 	let node = head;
@@ -63,6 +70,13 @@ export const hasCycle = (head) => {
 在循环中快指针`fast`一次走两步，慢指针`slow`一次走一步，如果存在环形链表，快指针`fast`总会在某个时刻追上慢指针`slow`（`slow === fast`），此时返回`true	`
 
 ```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val) {
+ *     this.val = val;
+ *     this.next = null;
+ * }
+ */
 export const hasCycle = (head) => {
 	if (!head || !head.next) return false;
 	let fast = head.next,
