--- a/Leetcode/note/linkedList/015.奇偶链表.328.md
+++ b/Leetcode/note/linkedList/015.奇偶链表.328.md
@@ -39,6 +39,13 @@
 最后我们将奇指针`odd`的下一位指向偶链表的头部`evenHead`，返回`head`就是排序后的链表
 
 ```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val) {
+ *     this.val = val;
+ *     this.next = null;
+ * }
+ */
 export const oddEvenList = (head) => {
 	if (!head) return null;
 	let odd = head,
