--- a/Leetcode/note/linkedList/016.旋转链表.61.md
+++ b/Leetcode/note/linkedList/016.旋转链表.61.md
@@ -22,6 +22,13 @@
 转换为数组进行旋转，旋转后再生成链表
 
 ```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val) {
+ *     this.val = val;
+ *     this.next = null;
+ * }
+ */
 export const rotateRight = (head, k) => {
 	const counts = [];
 	while (head) {
@@ -53,6 +60,13 @@ export const rotateRight = (head, k) => {
 - 然后将末尾节点`endNode`的下一个指向`null`，并返回`originHead`
 
 ```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val) {
+ *     this.val = val;
+ *     this.next = null;
+ * }
+ */
 export const rotateRight = (head, k) => {
 	if (!head || !head.next) return head;
 	let originHead = head,
