--- a/Leetcode/note/linkedList/017.两两交换链表中的节点.24.md
+++ b/Leetcode/note/linkedList/017.两两交换链表中的节点.24.md
@@ -30,6 +30,13 @@
 设立哨兵节点`sentinel`，新建指针`sentinelNode`指向哨兵节点，指针`firstNode`指向`sentinelNode.next`，指针`nextNode`指向`sentinelNode.next.next.next`，将节点重新按照`sentinelNode`->`sentinelNode.next.next`->`firstNode`->`nextNode`指向建立关系，然后每次以两个节点为一个整体向前移动，每次移动都需要确保`firstNode`和`firstNode.next`存在，最后结果返回`sentinel.next`
 
 ```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val) {
+ *     this.val = val;
+ *     this.next = null;
+ * }
+ */
 export const swapPairs = (head) => {
 	if (!head || !head.next) return head;
 	let sentinel = new ListNode();
@@ -56,6 +63,13 @@ export const swapPairs = (head) => {
 递归中的操作：以两个相邻节点为一个整体（即`head`和`head.next`），将`head.next`设为`newHead`，将`head`指向内层递归返回出来的新头部，将`newHead.next`指向`head`，然后返回这个`newHead`作为新头部返回出去
 
 ```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val) {
+ *     this.val = val;
+ *     this.next = null;
+ * }
+ */
 export const swapPairs = (head) => {
 	if (!head || !head.next) return head;
 	let newHead = head.next;
