--- a/Leetcode/note/linkedList/018.两数相加.2.md
+++ b/Leetcode/note/linkedList/018.两数相加.2.md
@@ -23,6 +23,13 @@
 直到两个节点指针`都`移动到各自的链表尾部，跳出循环，然后判断变量`decimal`是否有进位的`1`，如果有则将尾部节点指向`new ListNode(1)`，否则指向`null`
 
 ```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val) {
+ *     this.val = val;
+ *     this.next = null;
+ * }
+ */
 export const addTwoNumbers = (l1, l2) => {
 	let sumList = new ListNode();
 	let listHead = sumList;
@@ -48,6 +55,13 @@ export const addTwoNumbers = (l1, l2) => {
 递归的过程：新建节点`node`，求出对应位置的和（如果该节点不存在填充0），取出末位赋值给`node.val`，取出十位赋值给`carry`，将该节点`node.next`指向内层递归返回的节点
 
 ```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val) {
+ *     this.val = val;
+ *     this.next = null;
+ * }
+ */
 export const addTwoNumbers = (l1, l2) => {
 	let carry = 0;
 	function recursion(l1, l2, carry) {
