--- a/Leetcode/note/linkedList/019.对链表进行插入排序.147.md
+++ b/Leetcode/note/linkedList/019.对链表进行插入排序.147.md
@@ -21,6 +21,13 @@
 - 否则我们设置指针`index`指向`sentinel.next`，并且向后移动查找`current`的插入点，当`index.next.val`大于等于`current.val`时，`index`和`index.next`之间就是插入点，我们将`current`节点拼接在`index`和`index.next`之前。此时`head`（即`current`没有移动之前的前驱节点）后面的节点已经是原来`head.next.next`节点了，所以我们不需要移动`head`指针，继续判断即可
 
 ```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val) {
+ *     this.val = val;
+ *     this.next = null;
+ * }
+ */
 export const insertionSortList = (head) => {
 	if (!head || !head.next) return head;
 	let sentinel = new ListNode();
