--- a/Leetcode/note/search/006.搜索旋转排序数组.33.md
+++ b/Leetcode/note/search/006.搜索旋转排序数组.33.md
@@ -29,7 +29,7 @@
 
 ## 算法
 
-这一题类似上一题（[第153题：寻找旋转排序数组中的最小值](/js-data-structures-algorithms/leetcode/search/005.寻找旋转排序数组中的最小值.153.html#二分搜索)）的思路
+这一题类似上一题（[第153题：寻找旋转排序数组中的最小值](/leetcode/search/005.寻找旋转排序数组中的最小值.153.html#二分搜索)）的思路
 
 ### 二分查找
 
