--- a/Leetcode/note/string/020.找不同.389.md
+++ b/Leetcode/note/string/020.找不同.389.md
@@ -59,7 +59,7 @@ export const findTheDifference = (s, t) => {
 
 ### 位运算
 
-参考[136 - 只出现一次的数字](/js-data-structures-algorithms/leetcode/array/040.只出现一次的数字.136.html)
+参考[136 - 只出现一次的数字](/leetcode/array/040.只出现一次的数字.136.html)
 
 在两个字符串中重复出现的数出现次数是偶数，使用`交换律`和`结合律`可以异或运算他们的ASCII码为`0`，只出现一次的字母的ASCII码就是异或运算最后的结果
 
