--- a/Leetcode/note/design/001.最小栈.155.md
+++ b/Leetcode/note/design/001.最小栈.155.md
@@ -20,17 +20,23 @@
 输出：
 `[null,null,null,null,-3,null,0,-2]`
 
-解释：
-```
-MinStack minStack = new MinStack();
-minStack.push(-2);
-minStack.push(0);
-minStack.push(-3);
-minStack.getMin();   --> 返回 -3.
-minStack.pop();
-minStack.top();      --> 返回 0.
-minStack.getMin();   --> 返回 -2.
-``` 
+> 解释：
+> 
+> MinStack minStack = new MinStack();
+> 
+> minStack.push(-2);
+> 
+> minStack.push(0);
+> 
+> minStack.push(-3);
+> 
+> minStack.getMin();   --> 返回 -3.
+> 
+> minStack.pop();
+> 
+> minStack.top();      --> 返回 0.
+> 
+> minStack.getMin();   --> 返回 -2. 
 
 ## 提示
 
