--- a/Leetcode/note/linkedList/002.返回倒数第K个节点.面试题.02.02.md
+++ b/Leetcode/note/linkedList/002.返回倒数第K个节点.面试题.02.02.md
@@ -22,6 +22,13 @@
 `快指针`比`慢指针`提前走`k-1`步，然后两个指针同时前进，当`慢指针`抵达最后一个节点时，`快指针`指向的节点就是目标节点
 
 ```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val) {
+ *     this.val = val;
+ *     this.next = null;
+ * }
+ */
 export const kthToLast = (head, k) => {
 	let fast = head,
 		slow = head;
