--- a/Leetcode/note/linkedList/009.移除链表元素.,203.md
+++ b/Leetcode/note/linkedList/009.移除链表元素.,203.md
@@ -14,6 +14,13 @@
 ### 递归
 
 ```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val) {
+ *     this.val = val;
+ *     this.next = null;
+ * }
+ */
 export const removeElements = (head, val) => {
 	if (!head) return null;
 	head.next = removeElements(head.next, val);
@@ -24,6 +31,13 @@ export const removeElements = (head, val) => {
 ### 哨兵节点
 
 ```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val) {
+ *     this.val = val;
+ *     this.next = null;
+ * }
+ */
 export const removeElements = (head, val) => {
 	let sentinel = new ListNode();
 	sentinel.next = head;
