--- a/Leetcode/note/linkedList/014.从尾到头打印链表.剑指Offer06.md
+++ b/Leetcode/note/linkedList/014.从尾到头打印链表.剑指Offer06.md
@@ -18,6 +18,13 @@
 ### reverse()
 
 ```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val) {
+ *     this.val = val;
+ *     this.next = null;
+ * }
+ */
 export const reversePrint = (head) => {
 	const arr = [];
 	while (head) {
@@ -33,6 +40,13 @@ export const reversePrint = (head) => {
 注意`push()`返回的是操作后数组的长度`length`，不能直接`return`
 
 ```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val) {
+ *     this.val = val;
+ *     this.next = null;
+ * }
+ */
 export const reversePrint = (head) => {
 	if (!head) return [];
 	let arr = reversePrint(head.next);
