--- a/Leetcode/note/string/003.字符串中的第一个唯一字符.387.md
+++ b/Leetcode/note/string/003.字符串中的第一个唯一字符.387.md
@@ -2,7 +2,7 @@
 
 ## 题目
 
-给定一个字符串，找到它的第一个不重复的字符，并返回它的`索引`。如果不存在，则返回 `-1`。
+给定一个字符串，找到它的**第一个**不重复的字符，并返回它的`索引`。如果不存在，则返回 `-1`。
 
 ## 示例
 
@@ -46,7 +46,7 @@ export const firstUniqChar = (s) => {
 
 因为都是小写字母，创建一个长度为26的数组，按照`字符ascii码-97===数组下标`的规则维护数组
 
-遍历字符串，找到第一个值为`1`的项
+遍历字符串，对应上面创建的字幕出现次数的数组，找到第一个值为`1`的字母
 
 ```js
 export const firstUniqChar = (s) => {
@@ -75,5 +75,35 @@ export const firstUniqChar = (s) => {
 		}
 	}
 	return -1;
+};
+```
+
+### hashMap + 队列
+
+使用`Map`来保存字母和其最后出现位置
+
+使用队列`queue`来保存没有重复出现的字母且保持相对位置，如果队列头有重复出现的字母我们就推出，最后队列头部就是第一个没有重复的字母，如果队列为空则字符串中没有只出现一次的字母
+
+我们遍历字符串：
+
+- 如果字母在`Map`中没有出现过，那我们在`Map`中保存它出现的位置（所以这个值大于等于0），并且以`[ch, index]`的形式推入队列`queue`
+- 如果字母在`Map`中出现，那么说明这个字母重复了，我们在`Map`中将其值改为`-1`（表示重复出现），然后我们检查队列头，如果队列`queue`不为空而且队列头部的元素在`Map`中标记了位置为`-1`（即这个元素重复出现过）,那么我们将这个元素推出队列
+
+最后我们检查队列是否为空，如果不为空那么队列头部的元素一定是第一个不重复的字母，我们返回他的位置`queue[0][1]`
+
+```js
+export const firstUniqChar = (s) => {
+	const queue = [];
+	const map = new Map();
+	Array.prototype.forEach.call(s, (ch, i) => {
+		if (map.has(ch)) {
+			if (map.get(ch)[1] !== -1) map.set(ch, -1);
+			while (queue.length && map.get(queue[0][0]) === -1) queue.shift();
+		} else {
+			queue.push([ch, i]);
+			map.set(ch, i);
+		}
+	});
+	return queue.length ? queue[0][1] : -1;
 };
 ```
