--- a/Leetcode/note/array/018.三个数的最大乘积.628.md
+++ b/Leetcode/note/array/018.三个数的最大乘积.628.md
@@ -19,22 +19,24 @@
 
 ### 排序
 
-按升序排列数组，如果数组中所有数都为非负数，取最后三个数字
-如果有负数，最大值为前两个元素和最后一个元素的乘积
+按升序排列数组：
+
+- 如果数组中所有数都为非负数，取`最后三个数字之积`
+- 如果有负数，那么最大值可能是`后三个数字之积`；也可能是`前两个数字和最后一个数字之积`
 
 ```js
 export const maximumProduct = (nums) => {
 	nums.sort((a, b) => a - b);
-	let a = nums[nums.length - 1];
-	let case1 = nums[0] * nums[1];
-	let case2 = nums[nums.length - 2] * nums[nums.length - 3];
-	return case1 > case2 ? case1 * a : case2 * a;
+	return Math.max(
+		nums[0] * nums[1] * nums[nums.length - 1],
+		nums[nums.length - 1] * nums[nums.length - 2] * nums[nums.length - 3]
+	);
 };
 ```
 
 ### 找出三个最大数和两个最小数
 
-通过上面的方法可知：只需要找出最大的三个数和最下的两个数即可
+通过上面的方法可知：只需要找出最大的三个数和最小的两个数即可
 
 ```js
 export const maximumProduct = (nums) => {
