--- a/Leetcode/note/linkedList/026.环形链表II.142.md
+++ b/Leetcode/note/linkedList/026.环形链表II.142.md
@@ -73,7 +73,8 @@ const detectCycle = (head) => {
  *     this.val = val;
  *     this.next = null;
  * }
- */const detectCycle = (head) => {
+ */
+const detectCycle = (head) => {
 	while (head) {
 		if (head.flag) {
 			return head;
@@ -112,6 +113,13 @@ const detectCycle = (head) => {
 所以我们设定一个指针从头节点开始，以相同的速度和慢指针同时移动，当他们相遇时（新的指针走过了环外的距离，慢指针走完了环中剩余的距离），即为环的入口
 
 ```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val) {
+ *     this.val = val;
+ *     this.next = null;
+ * }
+ */
 const detectCycle = (head) => {
 	let fast = head,
 		slow = head;
